--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div id="printable">
         <header>
             <div class="container" id="header">
-                <img class="photo" src="Assets/me.png"></img>
+                <img class="photo" src="assets/me.png"></img>
                 <div class="info">
                     <div class="basicInfo" id="personal">
                         <div class="name" id="firstName"></div>
