--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div id="printable">
         <header>
             <div class="container" id="header">
-                <img class="photo" src="assets/me.png"></img>
+                <img class="photo" src="Assets/me.png"></img>
                 <div class="info">
                     <div class="basicInfo" id="personal">
                         <div class="name" id="firstName"></div>
@@ -39,27 +39,11 @@
             </div>
         </header>
 
-        <div class="container">
-            <section id="biography"></section>
-            <section id="experience"></section>
-            <section id="education"></section>
-            <section id="langsNtools">
-                <div class="horizontalSections">
-                    <div class="hsubs2" id="tools"></div>
-                    <div class="hsubs2" id="languages"></div>
-                </div>
-            </section>
-            <section id="projects"></section>
-            <section id="otherAndInterests">
-                <div class="horizontalSections">
-                    <div class="hsubs2" id="other"></div>
-                    <div class="hsubs2" id="interests"></div>
-                </div>
-            </section>
+        <div class="container" id="mainContent">
         </div>
 
         <footer>
-            2025 Konstantinos Psarras
+            <span id="pdfExtra"></span>
         </footer>
     </div>
 
@@ -68,4 +52,3 @@
 
 </body>
 </html>
-
